--- a/packages/site-section/src/helperComponents/SectionTitle/styles.module.scss
+++ b/packages/site-section/src/helperComponents/SectionTitle/styles.module.scss
@@ -4,6 +4,11 @@
   display: flex;
   flex-direction: column;
   gap: var.$dimension-1m;
+  text-align: left;
+
+  &[data-align='center'] {
+    text-align: center;
+  }
 }
 
 .title {
